--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description"
-    content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
-  <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
+  <meta name="description" content="VARGPT: Unified Understanding and Generation in a Visual
+    Autoregressive
+    Multimodal Large Language Model.">
+  <meta name="keywords" content="VARGPT">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nerfies: Deformable Neural Radiance Fields</title>
+  <title>VARGPT</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -363,8 +364,34 @@
       <!-- Animation. -->
       <div class="columns is-centered">
         <div class="column is-full-width">
-          <h2 class="title is-3">More generated samples</h2>
-
+          <h2 class="title is-3">More samples</h2>
+          <h3 class="title is-4">Visual understanding samples</h3>
+          <div class="content has-text-justified">
+            <p>
+              The cases of visual understanding in VARGPT show that our VARGPT has achieved superior performance in
+              understanding.
+            </p>
+          </div>
+          <div class="columns is-vcentered interpolation-panel">
+            <img src="./static/vargpt_images/visual_understanding_case1.jpg" class="interpolation-image-2"
+              alt="Interpolate start reference image." />
+          </div>
+          <div class="columns is-vcentered interpolation-panel">
+            <img src="./static/vargpt_images/visual_understanding_case2.jpg" class="interpolation-image-2"
+              alt="Interpolate start reference image." />
+          </div>
+          <div class="columns is-vcentered interpolation-panel">
+            <img src="./static/vargpt_images/visual_understanding_case3.jpg" class="interpolation-image-2"
+              alt="Interpolate start reference image." />
+          </div>
+          <h3 class="title is-4">Generated samples</h3>
+          <div class="content has-text-justified">
+            <p>
+              Some generated 256×256 samples by VARGPT trained on ImageNet-1K. VARGPT supports user text command input
+              and
+              outputs both text and image modal data simultaneously.
+            </p>
+          </div>
           <div class="columns is-vcentered interpolation-panel">
             <img src="./static/vargpt_images/VARGPT-exp-vis.jpg" class="interpolation-image-2"
               alt="Interpolate start reference image." />
