--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
   </section>
 
 
-  <section class="section" id="BibTeX">
+  <!-- <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{park2021nerfies,
@@ -427,7 +427,7 @@
   year      = {2021},
 }</code></pre>
     </div>
-  </section>
+  </section> -->
 
   <section class="section" id="Acknowledgement">
     <div class="container is-max-desktop content">
@@ -446,7 +446,7 @@
         outside of research purposes.
       </p>
 
-      <p>
+      <!-- <p>
         <a href="https://github.com/Computer-Vision-in-the-Wild/"><img id="painting_icon" width="10%"
             src="https://avatars.githubusercontent.com/u/97258247?s=200&amp;v=4"></a>
         Related Links:
@@ -454,7 +454,7 @@
         <a href="https://gligen.github.io/">[GLIGEN]</a>
         <a href="https://github.com/Computer-Vision-in-the-Wild/">[Computer Vision in the Wild (CVinW)]</a>
         <a href="https://instruction-tuning-with-gpt-4.github.io/">[Insutrction Tuning with GPT-4]</a>
-      </p>
+      </p> -->
     </div>
   </section>
 
