--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
           <h2 class="title is-3">Video</h2>
           <div class="publication-video">
 
-            <iframe src="https://www.youtube.com/watch?v=CO5fzwJ_B3k" frameborder="0" allow="autoplay; encrypted-media"
-              allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/CO5fzwJ_B3k?si=fTc6XvTWM100A7rL" frameborder="0"
+              allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
       </div>
