--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- PDF Link. -->
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="https://arxiv.org/abs/2501.12327" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
                     <span>Paper</span>
                   </a>
-                </span>
+                </span> -->
                 <span class="link-block">
                   <a href="https://arxiv.org/abs/2501.12327" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
