--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             <div class="is-size-6 publication-authors">
               <span class="author-block">xwzhuang@stu.pku.edu.cn</span>
             </div>
+            <div class="is-size-6 publication-authors">
+              <span class="author-block code-highlight">Code:https://github.com/VARGPT-family/VARGPT</span>
+            </div>
 
 
             <div class="column has-text-centered">
@@ -119,6 +122,7 @@
                 <span class="link-block">
                   <a href="https://github.com/VARGPT-family/VARGPT"
                     class="external-link button is-normal is-rounded is-dark">
+                    <!-- 添加 code-highlight 类 -->
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
